name:                OpenGLProject
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/OpenGLProject#readme
license:             BSD3
license-file:        LICENSE
author:              Henrik Söderlund
maintainer:          henrik.a.soderlund@hotmail.com
copyright:           2017 Henrik Söderlund
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable OpenGLProject
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       OpenGL >= 3.0,
                       GLUT >= 2.6 && < 2.8
  other-modules:       Bindings,
                       Cube,
                       Ellipse,
                       Line,
                       Display,
                       Points,
                       Math.Vector,
                       Physics.Gravity
